# Platitude

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: database.py  main.py
app/services/: plate.service.py
db/: package-lock.json  package.json
db/migrations/: 1770590373894_create-plates-table.ts
